# group-project-decentralised

./: .gitlab-ci.yml  LICENSE  README.md  data_analysis.py  model.py  patient.csv  pyproject.toml
AmazonWS/: clean_database.py
Centralised_Model/: centralised_model.py
Centralised_Model/Data/: patient.csv
FlowerBackend/strategies/: FedStrategy.py
Socket Test/: Test_Sender.py
Tests/: test_performance.py
contracts/: Database.sol  assets.sol
fl_network/: run_networks.sh
fl_network/client_1/: client.py  retrieve_model.py
fl_network/client_1/data/: patient.csv
fl_network/client_1/retrieved_models/: 1.py  client.py
fl_network/client_2/: retrieve_model.py
fl_network/client_2/data/: patient.csv
fl_network/client_2/retrieved_models/: simple_model.py
fl_network/client_3/: client.py
fl_network/client_3/data/: patient.csv
fl_network/data_scientist/: upload_model.py
fl_network/data_scientist/data/: patient.csv
fl_network/data_scientist/models/: description.txt  simple_model.py
fl_network/server/: app.py  client.py  server.py  server1.py
fl_network/utests/: test_api.py  test_fedavg_flower.py  test_flower.py  test_server_flower.py
fl_network_0.0.1/client/: retrieve_model.py
fl_network_0.0.1/server/: app.py
reactapp/: .gitignore  package-lock.json  package.json
reactapp/BlockchainBackend/: .env  package-lock.json  package.json  truffle-config.js
reactapp/BlockchainBackend/contracts/: DatasetDatabase.sol  Jobs.sol  ModelDatabase.sol  Registry.sol
reactapp/BlockchainBackend/migrations/: 2_deploy_contracts.js  2_deploy_registry.js  3_deploy_ModelDatabase.js  3_deploy_datasets.js  3_deploy_job.js  5_deploy_jobs.js  (+2 more)
reactapp/FlowerBackend/: abi.py  app.py  data.json  server.py  test_server.py
reactapp/public/: model.py
reactapp/public/ClientPackage/: client.py  instructions.txt  pyproject.toml
reactapp/src/: App.css  App.js  App.test.js  datasetdatabase.js  index.js  ipfs.js  modeldatabase.js  registrydatabase.js
test_files/: RDS_test.py  amazon3S_test.py
(+74 files in other folders)
