[tool.poetry]
name = "economic-incentives-and-privacy-preserving-ml"
version = "0.1.0"
description = "Main repository for economic-incentives-and-privacy-preserving-ml"
authors = ["Anna Beer <aab120@ic.ac.uk>","Marwan Moussa <mm7515@ic.ac.uk>",
           "Patrica Daxbacher <pd720@ic.ac.uk>", "Roopa Antony <ra2820@ic.ac.uk>",
           "Thomas Falezan <tf317@ic.ac.uk>", "Zepeng Hu <zh2220@ic.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.3"
numpy = "^1.20.1"
torch = "^1.8.0"
torchvision = "^0.9.0"
flwr = "^0.14.0"
matplotlib = "^3.3.4"
requests = "^2.25.1"
Flask = "^1.1.2"
pandas = "^1.2.3"
PyMySQL = "^1.0.2"
boto3 = "^1.17.39"
web3 = "^5.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
