[tool.poetry]
name = "group-project"
version = "0.1.0"
description = "Dapp depeendencie"
authors = ["Marwan Mousa <marwan.mousa15@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
torch = "^1.0.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
flwr = "^0.15.0"
Cython = "^0.29.23"
cytoolz = "^0.11.0"
requests = "^2.25.1"
web3 = "^5.18.0"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
