[tool.poetry]
name = "client-package"
version = "0.1.0"
description = ""
authors = ["Anna Beer <aab120@ic.ac.uk>","Marwan Moussa <mm7515@ic.ac.uk>",
           "Patrica Daxbacher <pd720@ic.ac.uk>", "Roopa Antony <ra2820@ic.ac.uk>",
           "Thomas Falezan <tf317@ic.ac.uk>", "Zepeng Hu <zh2220@ic.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
torch = "^1.8.0"
flwr = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
